[gd_scene load_steps=2 format=3 uid="uid://b6sfnk4hsjvbp"]

[ext_resource type="Script" path="res://stopping_timers.gd" id="1_fak7w"]

[node name="StoppingTimers" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fak7w")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="Timer1VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/Timer1VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Timer 1"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/CenterContainer/HBoxContainer/Timer1VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Time (in seconds)"
text = "4.0"

[node name="StateLabel" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/Timer1VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Running"

[node name="TimeLabel" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/Timer1VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "4.0"

[node name="Timer1" type="Timer" parent="MarginContainer/CenterContainer/HBoxContainer/Timer1VBoxContainer"]
unique_name_in_owner = true
wait_time = 4.0
autostart = true

[node name="Timer2VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/HBoxContainer"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/Timer2VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Timer 2"

[node name="LineEdit" type="LineEdit" parent="MarginContainer/CenterContainer/HBoxContainer/Timer2VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
tooltip_text = "Time (in seconds)"
text = "2.0"

[node name="StateLabel" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/Timer2VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "Paused"

[node name="TimeLabel" type="Label" parent="MarginContainer/CenterContainer/HBoxContainer/Timer2VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "2.0"

[node name="Timer2" type="Timer" parent="MarginContainer/CenterContainer/HBoxContainer/Timer2VBoxContainer"]
unique_name_in_owner = true
wait_time = 2.0

[node name="Timer2StartButton" type="Button" parent="MarginContainer/CenterContainer/HBoxContainer/Timer2VBoxContainer"]
layout_mode = 2
text = "Start"

[connection signal="text_changed" from="MarginContainer/CenterContainer/HBoxContainer/Timer1VBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="timeout" from="MarginContainer/CenterContainer/HBoxContainer/Timer1VBoxContainer/Timer1" to="." method="_on_timer_1_timeout"]
[connection signal="text_changed" from="MarginContainer/CenterContainer/HBoxContainer/Timer2VBoxContainer/LineEdit" to="." method="_on_line_edit_text_changed"]
[connection signal="timeout" from="MarginContainer/CenterContainer/HBoxContainer/Timer2VBoxContainer/Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="pressed" from="MarginContainer/CenterContainer/HBoxContainer/Timer2VBoxContainer/Timer2StartButton" to="." method="_on_timer_2_start_button_pressed"]
